--- a/templates/charts.html
+++ b/templates/charts.html
@@ -97,7 +97,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Goreslkii Roman</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Goreslkii Roman 212-1</span>
                             </a>
                         </li>
 
@@ -113,6 +113,10 @@
                     <div class="row">
 
                         <div class="col-xl-8 col-lg-7">
+
+                            <a href="https://github.com/RomanGorelsky/PROJECT/blob/main/HSE_PROG.PROJECT_OFFICE.ipynb" class="btn btn-primary my-2">See analysis in Jupyter Notebook</a>
+                            <!-- Divider -->
+                            <hr class="sidebar-divider">
 
                             <h6 class="m-0 font-weight-bold text-primary">1. These three charts represent mean(), median(), standard deviation() for "Ratings" in each season.</h6>
 
