--- a/templates/tables.html
+++ b/templates/tables.html
@@ -123,7 +123,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Gorelskii Roman</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Gorelskii Roman 212-1</span>
                             </a>
                         </li>
 
@@ -139,6 +139,7 @@
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">The Office DataSet</h6>
+                            <a href="https://www.kaggle.com/nehaprabhavalkar/the-office-dataset/download" class="btn btn-primary my-2">Download the dataset</a>
                         </div>
                         <div class="card-body">
                         <div class="table-responsive">
